Final CRUD Operations Update For User, Role, Node Entities